--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/profile.JPG" alt="Image"/></a></div>
-          <div class="h2 title">Darshil Shankar</div>
+          <div class="h2 title">Darshil V Shankar</div>
           <p class="category text-white">Android Developer, Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
         </div>
       </div>
