--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/profile.JPG" alt="Image"/></a></div>
           <div class="h2 title">Darshil Shankar</div>
-          <p class="category text-white">Android Developer, Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <p class="category text-white">Android Developer, Graphic Designer</p>
         </div>
       </div>
      
@@ -374,7 +374,7 @@
           <div class="card-body">
             <div class="h5">Bachelor of Computer Application</div>
             <p class="category">SDJ International College</p>
-            <p>I am currently pursuing BCA - Sem 5 in SDJ International College. I have scored 'Distinction' in all four semesters.</p>
+            <p>I am currently pursuing BCA - Sem 6 in SDJ International College. I have scored 'Distinction' in all four semesters.</p>
           </div>
         </div>
       </div>
