--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">78, Haridarshan Society, Laxmikant Ashram Road, Katargam, Surat</div>
+              <div class="col-sm-8">Katargam, Surat - 395004</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
