--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -374,7 +374,7 @@
           <div class="card-body">
             <div class="h5">Bachelor of Computer Application</div>
             <p class="category">SDJ International College</p>
-            <p>I am currently pursuing BCA - Sem 6 in SDJ International College. I have scored 'Distinction' in all four semesters.</p>
+            <p>I am currently pursuing BCA - Sem 6 in SDJ International College. I have scored 'Distinction' in all five semesters.</p>
           </div>
         </div>
       </div>
