--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/profile.JPG" alt="Image"/></a></div>
           <div class="h2 title">Darshil Shankar</div>
-          <p class="category text-white">Android Developer, Graphic Designer</p>
+          <p class="category text-white">Product Manager, UI/UX Designer, Business Analyst</p>
         </div>
       </div>
      
