--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
@@ -437,14 +437,17 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>May 2018 - July 2018</p>
-            <div class="h5">Red and White Multimedia</div>
+            <p>September 2022 - Present</p>
+            <div class="h5">Stevens Institute of Technology</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Trainee</div>
-            <p>During 12th Vacation, I joined Red and White Multimedia for learning Android. They taught me Java and Android from scratch which helped me gaining knowledge before my college years. I learned Java OOP concepts and Android Studio Tools and developed my First Android App there.</p>
+            <div class="h5">Graduate Assistant</div>
+            <p>· Helping students with their academic projects and presented them to the industry leaders in Corporate Networking
+Events.
+· Managing UI/UX, Frontend & Backend of the University’s E-portfolio website of the student projects from scratch to
+launch.</p>
           </div>
         </div>
       </div>
