--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -444,9 +444,9 @@ e<!DOCTYPE html>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Graduate Assistant</div>
-            <p class="category">Stevens Institute of Technology</p>
-            <p>Helping students with their academic projects and presented them to the industry leaders in Corporate Networking
-Events.</p>
+            <p class="category">United States</p>
+            <p>• Helping students with their academic projects and presented them to the industry leaders in Corporate Networking Events.<br>
+• Managing UI/UX, Frontend & Backend of the University’s E-portfolio website of the student projects from scratch to launch.</p>
           </div>
         </div>
       </div>
