--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -527,7 +527,12 @@ e<!DOCTYPE html>
           <div class="card-body">
             <div class="h5">Commerce</div>
             <p class="category">Gajera International School</p>
-            <p>I had scored 81% in 12th Commerce Board Exams pursued in Gajera International School, Katargam.</p>
+            <p>•	Led team of ten (six engineers, two designers, two testers) for end-to-end development and launch of six android and IOS apps that generated $500K+ revenue within a 6-month period.<br>
+                •	Built alignment with cross-functional stakeholders such as Marketing, Design, Development and other product teams for accelerating execution and tackle opportunities in target markets leading to 30% increase in user growth.<br>
+                •	Led project to redesign an app and developed new data-driven approach, which resulted in 90% increase in subscriptions and 97% increase in engagement. Developed company dashboards in Power BI and Tableau to enable tracking of user engagement.<br>
+                •	Strategized, developed, and managed paid digital marketing across AdWords, Instagram and Facebook with a monthly budget of $20K, resulting in $50K+ in monthly revenue, and launched App Store Optimisation Campaigns that increased organic downloads by 3 times.<br>
+                •	Led A/B testing of new features through usability tests, rapidly validating or disproving product hypotheses, informed by user needs and technical feasibility and delivering a roadmap of onboarding features leading to 25% increase in user retention.<br>
+                •	Performed quantitative and qualitative research through engaging directly with customers to understand user behaviour, gather feedback, and validate hypotheses, to identify product opportunities and prioritize an impactful roadmap to delivery an MVP experience for an app that increased DAU by 15%.</p>
           </div>
         </div>
       </div>
