--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -500,20 +500,22 @@ e<!DOCTYPE html>
     
 <div class="section" id="experience">
   <div class="container cc-education">
-    <div class="h4 text-center mb-4 title">Education</div>
+    <div class="h4 text-center mb-4 title">Work Experience</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2018 - 2021 (Running)</p>
-            <div class="h5">Bachelor's Degree</div>
+            <p>September 2022 - Present</p>
+            <div class="h5">Stevens Institute of Technology</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Computer Application</div>
-            <p class="category">SDJ International College</p>
-            <p>I am currently pursuing BCA - Sem 6 in SDJ International College. I have scored 'Distinction' in all five semesters.</p>
+            <div class="h5">Graduate Assistant</div>
+            <p class="category">United States</p>
+            <p>•	Helping students with their academic projects and presented them to the industry leaders in Corporate Networking Events.<br>
+                •	Managing UI/UX, Frontend & Backend of the University’s E-portfolio website of the student projects from scratch to launch.
+            </p>
           </div>
         </div>
       </div>
@@ -522,14 +524,14 @@ e<!DOCTYPE html>
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2016 - 2018</p>
-            <div class="h5">Higher Secondary</div>
+            <p>June 2021 - July 2022</p>
+            <div class="h5">Liger Infotech</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Commerce</div>
-            <p class="category">Gajera International School</p>
+            <div class="h5">Product Manager</div>
+            <p class="category">India</p>
             <p>•	Led team of ten (six engineers, two designers, two testers) for end-to-end development and launch of six android and IOS apps that generated $500K+ revenue within a 6-month period.<br>
                 •	Built alignment with cross-functional stakeholders such as Marketing, Design, Development and other product teams for accelerating execution and tackle opportunities in target markets leading to 30% increase in user growth.<br>
                 •	Led project to redesign an app and developed new data-driven approach, which resulted in 90% increase in subscriptions and 97% increase in engagement. Developed company dashboards in Power BI and Tableau to enable tracking of user engagement.<br>
@@ -544,15 +546,18 @@ e<!DOCTYPE html>
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2015 - 2016</p>
-            <div class="h5">SSC</div>
+            <p>March 2020 - September 2020</p>
+            <div class="h5">Liger Infotech</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Mathematics, Science, Languages</div>
-            <p class="category">Gajera International School</p>
-            <p>I had scored 86% in 10th Board Exam pursued in Gajera International School, Katargam.</p>
+            <div class="h5">Android Developer Intern</div>
+            <p class="category">India</p>
+            <p>•	Collaborated cross functionally with product managers, software developers, UI designers and testing engineers to optimize the user experience of Android Apps with high quality and great performance.<br>
+                •	Participated in brainstorm and user feedback sessions to gather input to apply rapid changes for prototype iterations.<br>
+                •	Managed tasks within Agile framework, and controlled JIRA workflows along with handling daily stand-up meetings.<br>
+            </p>
           </div>
         </div>
       </div>
