--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -572,15 +572,15 @@ e<!DOCTYPE html>
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2018 - 2021 (Running)</p>
-            <div class="h5">Bachelor's Degree</div>
+            <p>August 2022 - Present</p>
+            <div class="h5">Stevens Institute of Technology</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Computer Application</div>
-            <p class="category">SDJ International College</p>
-            <p>I am currently pursuing BCA - Sem 6 in SDJ International College. I have scored 'Distinction' in all five semesters.</p>
+            <div class="h5">Master of Science in Business Intelligence & Analytics</div>
+            <p class="category">Hoboken, New Jersey, USA</p>
+            <p>Related Courses: Data Management, Optimization and Process Analytics, Multivariate Data Analytics, Financial Decision Making, Marketing Analytics, Social Network Analytics, Data Analytics & Machine Learning, Management of AI technologies</p>
           </div>
         </div>
       </div>
@@ -589,37 +589,15 @@ e<!DOCTYPE html>
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2016 - 2018</p>
-            <div class="h5">Higher Secondary</div>
+            <p>June 2018 - June 2021</p>
+            <div class="h5">Veer Narmad South Gujarat University</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Commerce</div>
-            <p class="category">Gajera International School</p>
-            <p>•	Led team of ten (six engineers, two designers, two testers) for end-to-end development and launch of six android and IOS apps that generated $500K+ revenue within a 6-month period.<br>
-                •	Built alignment with cross-functional stakeholders such as Marketing, Design, Development and other product teams for accelerating execution and tackle opportunities in target markets leading to 30% increase in user growth.<br>
-                •	Led project to redesign an app and developed new data-driven approach, which resulted in 90% increase in subscriptions and 97% increase in engagement. Developed company dashboards in Power BI and Tableau to enable tracking of user engagement.<br>
-                •	Strategized, developed, and managed paid digital marketing across AdWords, Instagram and Facebook with a monthly budget of $20K, resulting in $50K+ in monthly revenue, and launched App Store Optimisation Campaigns that increased organic downloads by 3 times.<br>
-                •	Led A/B testing of new features through usability tests, rapidly validating or disproving product hypotheses, informed by user needs and technical feasibility and delivering a roadmap of onboarding features leading to 25% increase in user retention.<br>
-                •	Performed quantitative and qualitative research through engaging directly with customers to understand user behaviour, gather feedback, and validate hypotheses, to identify product opportunities and prioritize an impactful roadmap to delivery an MVP experience for an app that increased DAU by 15%.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>2015 - 2016</p>
-            <div class="h5">SSC</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Mathematics, Science, Languages</div>
-            <p class="category">Gajera International School</p>
-            <p>I had scored 86% in 10th Board Exam pursued in Gajera International School, Katargam.</p>
+            <div class="h5">Bachelor of Computer Applications, Computer Science</div>
+            <p class="category">Surat, Gujarat, India</p>
+            <p>Related Courses: Mathematics, Advance “C” Programming, Statistical Methods, Software Engineering, Information Systems, Operating Systems, Data Structures, JAVA, Web Designing, PHP My SQL, ASP .NET</p>
           </div>
         </div>
       </div>
