--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -580,7 +580,7 @@ e<!DOCTYPE html>
           <div class="card-body">
             <div class="h5">Master of Science in Business Intelligence & Analytics</div>
             <p class="category">Hoboken, New Jersey, USA</p>
-            <p>Related Courses: Data Management, Optimization and Process Analytics, Multivariate Data Analytics, Financial Decision Making, Marketing Analytics, Social Network Analytics, Data Analytics & Machine Learning, Management of AI technologies</p>
+            <p><b>Related Courses:</b> Data Management, Optimization and Process Analytics, Multivariate Data Analytics, Financial Decision Making, Marketing Analytics, Social Network Analytics, Data Analytics & Machine Learning, Management of AI technologies</p>
           </div>
         </div>
       </div>
@@ -597,7 +597,7 @@ e<!DOCTYPE html>
           <div class="card-body">
             <div class="h5">Bachelor of Computer Applications, Computer Science</div>
             <p class="category">Surat, Gujarat, India</p>
-            <p>Related Courses: Mathematics, Advance “C” Programming, Statistical Methods, Software Engineering, Information Systems, Operating Systems, Data Structures, JAVA, Web Designing, PHP My SQL, ASP .NET</p>
+            <p><b>Related Courses:</b> Mathematics, Advance “C” Programming, Statistical Methods, Software Engineering, Information Systems, Operating Systems, Data Structures, JAVA, Web Designing, PHP My SQL, ASP .NET</p>
           </div>
         </div>
       </div>
