--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -26,7 +26,7 @@ e<!DOCTYPE html>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">My Projects</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
               </ul>
             </div>
           </div>
@@ -565,7 +565,7 @@ e<!DOCTYPE html>
   </div>
 </div>    
     
-<div class="section">
+<div class="section" id="education">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
     <div class="card">
@@ -605,6 +605,7 @@ e<!DOCTYPE html>
   </div>
 </div>
 
+<!--
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
     <div class="container">
@@ -664,6 +665,7 @@ e<!DOCTYPE html>
   </div>
 </div></div>
     </div>
+-->
     
     <script src="js/core/jquery.3.2.1.min.js"></script>
     <script src="js/core/popper.min.js"></script>
