--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -405,7 +405,7 @@
                         <figure class="cc-effect"><img src="images/Slide13.png" alt="Image"/>
                           <figcaption>
                             <div class="h4">AI Photo Colorize & Enhancer</div>
-                            <p>Android Development, Design, Launching</p>
+                            <p>IOS Development, Design, Launching</p>
                           </figcaption>
                         </figure></a></div>
 
