--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -415,7 +415,7 @@
                           <figure class="cc-effect"><img src="images/Slide14.png" alt="Image"/>
                             <figcaption>
                               <div class="h4">SafeDoc Docs Photo Video Vault</div>
-                              <p>Android Development, Design, Launching</p>
+                              <p>IOS Development, Design, Launching</p>
                             </figcaption>
                           </figure></a></div>
 
@@ -455,7 +455,7 @@
 
                               </div>
                               <div class="col-md-6">
-                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://play.google.com/store/apps/details?id=com.darkmodeapps.gstcalculator">
+                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://apps.apple.com/us/app/gst-calculator-gst-search/id1491880965">
                                 <figure class="cc-effect"><img src="images/Slide6.png" alt="Image"/>
                                   <figcaption>
                                     <div class="h4">GST Calculator and Verification</div>
