--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -492,6 +492,29 @@
 
                                   </div>
                                 </div>
+                             <div class="row">
+
+                              <div class="col-md-6">
+                                <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                                  <figure class="cc-effect"><img src="images/Slide12.png" alt="Image"/>
+                                    <figcaption>
+                                      <div class="h4">GST Invoice and Billing App</div>
+                                      <p>Screenshots, Icons and App Icons Design</p>
+                                    </figcaption>
+                                  </figure></a></div>
+
+                                </div>
+                                <div class="col-md-6">
+                                  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                                    <figure class="cc-effect"><img src="images/Slide7.png" alt="Image"/>
+                                      <figcaption>
+                                        <div class="h4">GST Calculator and Verification</div>
+                                        <p>Screenshots, Icons and App Icons Design</p>
+                                      </figcaption>
+                                    </figure></a></div>
+
+                                  </div>
+                                </div>
                               </div>
                             </div>     
                           </div>
