--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -682,7 +682,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide7.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Calculator and Verification</div>
+                        <div class="h4">Test Calculator and Verification</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
