--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -556,7 +556,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide17.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Invoice and Billing App</div>
+                        <div class="h4">USCIS Case Tracker</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
@@ -568,7 +568,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide19.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Calculator and Verification</div>
+                        <div class="h4">AI Chat - Ask Anything</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
@@ -582,7 +582,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide18.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Invoice and Billing App</div>
+                        <div class="h4">AI Photo Colorize & Enhancer</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
@@ -594,7 +594,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide20.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Calculator and Verification</div>
+                        <div class="h4">SafeDoc Docs Photo Video Vault</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
@@ -608,7 +608,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide9.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Invoice and Billing App</div>
+                        <div class="h4">Click To Chat: Direct Message</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
@@ -620,7 +620,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide11.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Calculator and Verification</div>
+                        <div class="h4">3D Meditation Breathing App</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
