--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -646,7 +646,7 @@
                     <figure class="cc-effect">
                       <img src="images/Slide20.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">GST Calculator and Verification</div>
+                        <div class="h4">SafeDoc Docs Photo Video Vault</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
