--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -508,9 +508,9 @@
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <a href="https://apps.apple.com/us/app/3d-meditation-breathe-exercise/id1503443775">
                       <figure class="cc-effect">
-                        <img src="images/Slide2.png" alt="Image" />
+                        <img src="images/Slide23.png" alt="Image" />
                         <figcaption>
-                          <div class="h4">3D Meditation Breathing App</div>
+                          <div class="h4">Cam Scan</div>
                           <p>IOS Development, Design, Launching</p>
                         </figcaption>
                       </figure>
@@ -618,9 +618,9 @@
                 <div class="col-md-6">
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <figure class="cc-effect">
-                      <img src="images/Slide11.png" alt="Image" />
+                      <img src="images/Slide24.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">3D Meditation Breathing App</div>
+                        <div class="h4">Cam Scan</div>
                         <p>Screenshots, Icons and App Icons Design</p>
                       </figcaption>
                     </figure>
